src/test/ui/issues/issue-51751.stderr
error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/issue-51751.rs:11:20
   |
LL |     let finished = result.await;
   |                    ^^^^^^^^^^^^

error: aborting due to previous error

